--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-body bg-base-100">
-    <%= render "shared/form_errors", errors: @record.errors.full_messages %>
+    <%= render "shared/form_errors", errors: transaction.errors.full_messages %>
 
     <%= form_for transaction, local: true, html: {data: {controller: "transaction-form"}, class: "card"} do |form| %>
       <fieldset class="fieldset">
@@ -9,11 +9,8 @@
                    class: "fieldset-legend" %>
 
         <%= form.select :sender_id,
-                    Bank
-                      .order("LOWER(name) ASC")
-                      .where(currency: current_exchange_rate.target)
-                      .map { |bank| [bank.display_name, bank.id] },
-                    { prompt: t("select_bank"), selected: @sender.try(:id) },
+                    [Bank.ves_default].map { |bank| [bank.display_name, bank.id] },
+                    { prompt: t("select_bank"), selected: sender.try(:id) },
                     {
                       class: "select select-bordered w-full",
                       data: {
@@ -25,10 +22,11 @@
       </fieldset>
 
       <fieldset class="fieldset">
-        <legend class="fieldset-legend"><%= model_class.human_attribute_name(:receiver_id) %></legend>
+        <%= form.label :receiver_id, model_class.human_attribute_name(:receiver_id) %>
+
         <%= form.select :receiver_id,
                     Customer.all.map { |customer| [customer.name, customer.id] },
-                    { prompt: t("select_customer"), selected: @receiver.try(:id) },
+                    { prompt: t("select_customer"), selected: form.object.receiver_id },
                     {
                       class: "select select-bordered w-full",
                       data: {
@@ -37,6 +35,28 @@
                       required: true,
                     } %>
       </fieldset>
+
+      <fieldset class="fieldset">
+        <%= form.label :bank_balances, model_class.human_attribute_name(:bank_balances) %>
+
+        <%= form.select :bank_balances,
+                    sender
+                      .bank_balances
+                      .order("id DESC")
+                      .map { |bank_balance|
+                        [bank_balance.display_name, bank_balance.id]
+                      },
+                    { prompt: t("select_customer"), selected: form.object.receiver_id },
+                    {
+                      multiple: true,
+                      class: "select select-bordered w-full",
+                      data: {
+                        action: "auto-submit#submit",
+                      },
+                      required: true,
+                    } %>
+      </fieldset>
+
       <div>
         <%= form.hidden_field :sender_type, value: "Bank" %>
         <%= form.hidden_field :receiver_type, value: "Customer" %>
