--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -1,3 +1,3 @@
 <%= content_for(:page_title) { t(".title") } %>
 <%= content_for(:page_description) { t(".description") } %>
-<%= render "form", transaction: @record, sender: @sender, receiver: @receiver %>
+<%= render "form", transaction: @record, sender: Bank.ves_default %>
