--- a/app/views/banks/show.html.erb
+++ b/app/views/banks/show.html.erb
@@ -1,64 +1,24 @@
 <%= content_for(:page_title) { @bank.name } %>
 
 <div class="flex gap-2">
-  <button onclick="new_bank_balance.showModal()" class="btn btn-primary btn-xs">Crear Saldo</button>
+  <button
+    onclick="new_bank_transaction.showModal()"
+    class="btn btn-primary btn-xs"
+  >Crear Saldo</button>
 </div>
 <!-- Modal para crear saldo bancario -->
-<dialog id="new_bank_balance" class="modal">
+<dialog id="new_bank_transaction" class="modal">
   <div class="modal-box">
-    <%= simple_form_for([@bank, @bank.bank_balances.new], wrapper: :daisyui) do |f| %>
-
-      <div class="flex gap-3 mb-4">
-        <button type="button" class="btn btn-circle btn-primary btn-soft">
-          <%= icon("dollar") %>
-        </button>
-        <div class="flex-1">
-          <h3 class="text-lg font-bold">Crear Saldo Bancario</h3>
-          <small class="label">Registra un nuevo saldo disponible para este banco</small>
-        </div>
-      </div>
-
-      <%= f.input :amount,
-              label: "Monto",
-              input_html: {
-                data: {
-                  controller: "number-input",
-                },
-              },
-              hint: "Ingresa el monto disponible en #{@bank.currency}" %>
-
-      <%= f.input :rate,
-              label: "Tasa de Cambio",
-              input_html: {
-                data: {
-                  controller: "number-input",
-                },
-              },
-              hint: "Ejemplo: 1 CLP = X #{@bank.currency}" %>
-
-      <%= f.input :description,
-              as: :text,
-              label: "Descripción (opcional)",
-              input_html: {
-                class: "textarea textarea-bordered w-full",
-                rows: 3,
-                placeholder: "Ingresa una descripción para este saldo...",
-              } %>
-
-      <div class="modal-action">
-        <form method="dialog">
-          <button class="btn">Cancelar</button>
-        </form>
-        <%= f.submit "Crear Saldo", class: "btn btn-primary" %>
-      </div>
-    <% end %>
+    <%= render "bank_balances/form", bank: @bank %>
   </div>
   <form method="dialog" class="modal-backdrop">
     <button>close</button>
   </form>
 </dialog>
 
-<%= render "bank_balances/list", bank_balances: @bank.bank_balances, bank: @bank %>
+<%= render "bank_balances/list",
+bank_balances: @bank.bank_balances.order(id: :desc),
+bank: @bank %>
 
 <div class="stats w-full bg-base-100 border-base-300 border mb-4">
   <%= render "shared/stat",
